welcome.lessons.welcome.loopfor.LoopFor.scala.code
var nbPas = 0
while (!estSurBiscuit){
      nbPas = nbPas + 1;
      avance();
      }
prendBiscuit(); 
var dejafait = 0     	
for (dejafait <- 1 to nbPas){
	  dejafait = dejafait + 1;
	  recule();   
}
poseBiscuit();